--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <div id="spree-header">
   <header id="header" data-hook>
   	
-   <center>ELLO</center>
+   <center><b>MICHEALS COLLECTION</b></center>
    <div id="main"> </div>
   </header>
   <div class="container">
