--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -24,6 +24,9 @@
 
         <%= yield :templates %>
       </div>
+
+      <%= render :partial => 'spree/shared/footer' %>
+
     </div>
   </body>
 </html>
