--- a/app/assets/stylesheets/spree/frontend/_variables.scss
+++ b/app/assets/stylesheets/spree/frontend/_variables.scss
@@ -9,7 +9,7 @@ $title_text_color:          #190707 !default;
 $body_text_color:           #190707 !default;
 $link_text_color:           #190707 !default;
 
-$product_background_color:  #190707 !default;
+$product_background_color:  #FFFFFF !default;
 $product_title_text_color:  #190707 !default;
 $product_body_text_color:   #190707 !default;
 $product_link_text_color:   #190707 !default;
