--- a/app/views/spree/checkout/edit.html.erb
+++ b/app/views/spree/checkout/edit.html.erb
@@ -6,7 +6,7 @@
     <div class="columns thirteen omega" data-hook="checkout_progress"><%= checkout_progress %></div>
   </div>
 
-  <div class="row" data-hook="checkout_content">
+  <div class="col-md-6"  data-hook="checkout_content">
     <div class="columns <%= if @order.state != 'confirm' then 'alpha twelve' else 'alpha omega sixteen' end %>" data-hook="checkout_form_wrapper">
       <%= form_for @order, :url => update_checkout_path(@order.state), :html => { :id => "checkout_form_#{@order.state}" } do |form| %>
         <% if @order.state == 'address' || !@order.email? %>
@@ -34,3 +34,4 @@ Spree.current_order_token = "<%= @order.guest_token %>"
 <% if I18n.locale != :en %>
   <%= javascript_include_tag 'jquery.validate/localization/messages_' + I18n.locale.to_s.downcase.gsub('-', '') %>
 <% end %>
+</div>
