--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -9,30 +9,37 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="http://img02.deviantart.net/92ed/i/2015/176/9/d/inside_out_fan_movie_poster_by_an_christiancomics-d8yq41c.jpg" alt="...">
+      <a href="/t/movies/children"><img src="http://www.hdwallpaperup.com/wp-content/uploads/2015/07/Inside-Out-Movie-Poster.jpg" alt="..."></a>
       <div class="carousel-caption">
         <small class="word5" data-hook><%= link_to Spree.t(:shop), spree.products_path %></small>
       </div>
     </div>
     <div class="item">
+    	<img src="">
       <div class="carousel-caption2">
-        <p>The Whole Gang is Here for the Holiday!</p>
+        <p>ALL THE FAVORITES!</p>
+
+        <img src="http://cdn.toptenreviews.com/rev/misc/articles/7687/the-12-greatest-7.jpg">
+        <img src="http://ia.media-imdb.com/images/M/MV5BMTI1NzY1NjkyMV5BMl5BanBnXkFtZTcwMjYxNjE0MQ@@._V1_SX640_SY720_.jpg">
+        <img src="http://www.dvdsreleasedates.com/covers/home-alone-collection-blu-ray-cover-70.jpg">
+        <img src="http://ia.media-imdb.com/images/M/MV5BMTc5MDY0MjkwNV5BMl5BanBnXkFtZTcwNTk2Njk3OA@@._V1_SX640_SY720_.jpg">
+        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRBaACP12uAv14jbflCHLhzUrPQHNfxiPEhghCtH8U4soGpIFU6">
+        <img src="http://content6.flixster.com/movie/11/16/74/11167404_ori.jpg">
+        <br>
+        <a href="/t/movies/classic" class="btn btn-default"> SHOP </a>
       </div>
     </div>
-    ...
   </div>
-
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#carousel-example-generic"  data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
-
 
 	<div class="container">
 	<div class="row">
@@ -62,6 +69,8 @@
 		</div>
 	</div>
 	</div>
+
+
 
 	<div class="container">
 	<div class="row">
@@ -93,3 +102,6 @@
 </div>
 
 
+<div class="banner_holder">
+    <div class="banner_holderImage"></div>  
+</div>
