--- a/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -20,9 +20,20 @@ body {
   background-color: $layout_background_color;
   -webkit-font-smoothing: antialiased;
 }
+#fun{
+  text-align:center;
+  font-size: 50px;
+  color: #C9A67A;
+  text-shadow: 5px outset #CD9A5A;
+  a{
+  font-size: 50px;
+  color: #C9A67A;
+  text-shadow: 5px outset #CD9A5A;
+  }
+}
 .banner_holder{
     width: 100%;
-    height: 900px;
+    height: 300px;
     min-height: 200px;
     position: relative;
     outline:1px dotted red;
@@ -54,7 +65,7 @@ body {
 }
 
 .carousel-inner{
-    background: url("http://www.freelargeimages.com/wp-content/uploads/2014/12/Christmas_background-9.png");
+    background: url("http://www.ubabags.com/skin/frontend/argento/argento/images/xmas-background.jpg");
   position:relative;
   background-size: cover;
   background-repeat: no-repeat;
@@ -67,6 +78,7 @@ body {
   text-align: center;
   p{
   padding-bottom: 20px;
+  color: black;
   }
   a{
     margin-top: 20px;
@@ -75,6 +87,56 @@ body {
     width: cover;
     height: 200px;
 
+  }
+}
+#item2{
+  background: url("http://mockuphone.com/static/images/tv/samsung_es8000_front.png");
+  osition:relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  text-align: center;
+  height: 700px;
+  p{font-size: 50px;
+  }
+}
+
+#tv1{
+  border: solid 5px white;
+  background: black;
+  text-align: center;
+    color: white;
+  height: 350px;
+  p{font-size: 50px;
+    padding-top: 20px;
+  }
+  img{
+    width: cover;
+    height: 200px;
+  }
+   a{
+    margin-top: 20px;
+  }
+}
+
+#tv2{
+  border: solid 5px white;
+  background: black;
+  text-align: center;
+  color: white;
+  height: 350px;
+  p{font-size: 50px;
+    padding-top: 20px;
+  }
+  img{
+    width: cover;
+    height: 200px;
+  }
+   a{
+    margin-top: 20px;
   }
 }
 
@@ -414,6 +476,9 @@ table {
 nav#top-nav-bar {
   text-align: right;
   margin-top: 20px;
+  background: black;
+
+
 
   ul {
     li {
@@ -425,6 +490,7 @@ nav#top-nav-bar {
         font-size: $header_navigation_font_size;
         text-transform: uppercase;
         font-size: 25px;
+
       }
 
     }
@@ -432,10 +498,7 @@ nav#top-nav-bar {
 }
 
 .navbar-right{
-  padding-right: 10px;
-}
-nav #fun{
-  text-align:center;
+  padding-right: 20px;
 }
 nav #main-nav-bar {
   text-transform: uppercase;
@@ -453,13 +516,6 @@ nav #main-nav-bar {
       a {
         padding-left: 0
       }
-    }
-
-    &#fun{
-    text-align: center;
-    }
-    #cart{
-    float: right;
     }
 
     &#link-to-cart {
