--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -29,6 +29,20 @@
         <a href="/t/movies/classic" class="btn btn-default"> SHOP </a>
       </div>
     </div>
+  <div class="item" id="item2">
+    	<img src="">
+      <div class="carousel-caption2">
+        <p>CLASSIC OLDIES AND NEW CLASSICS!</p>
+
+        <img src="http://moviedownloadlinks.com/wp-content/uploads/2014/05/sons-of-anarchy-season-two-dvd-cover-64-e1400166872511.jpg">
+        <img src="http://cdn.collider.com/wp-content/uploads/30-rock-season-5-dvd-cover.jpg">
+        <img src="http://media3.popsugar-assets.com/files/2013/11/21/850/n/1922283/3eccd3616cab66a6_91iF5nx-50L._SL1500_.xxxlarge/i/New-Girl-Complete-Second-Season-DVD-40.jpg">
+        <img src="http://dvdbrowser.law.virginia.edu/system/files/styles/poster-large/private/ModernFamilySeason1_DVD_Oring.jpg?itok=sxcv8VoK">
+        <img src="https://upload.wikimedia.org/wikipedia/en/a/ad/Big_Bang_Theory_1.jpg">
+        <br>
+        <a href="/t/movies/classic" class="btn btn-default"> SHOP </a>
+      </div>
+    </div>
   </div>
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic"  data-slide="prev">
@@ -104,4 +118,27 @@
 
 <div class="banner_holder">
     <div class="banner_holderImage"></div>  
+</div>
+
+<div class="row">
+	<div class="col-md-6" id="tv1">
+		<p>
+			MUST SEE TV!
+		</p>
+		<img src="http://ecx.images-amazon.com/images/I/512h9O8UUyL.jpg">
+		<img src="http://ecx.images-amazon.com/images/I/81xy%2BTe3k2L._SL1500_.jpg">
+		<img src="http://ecx.images-amazon.com/images/I/51g-U3ChlbL._SY445_.jpg">
+		 <br>
+        <a href="/t/movies/classic" class="btn btn-default"> SHOP </a>
+	</div>
+	<div class="col-md-6" id="tv2">
+		<p>
+			BE THE HERO!
+		</p>
+		<img src="http://www.dvdsreleasedates.com/covers/arrow-the-complete-first-season-dvd-cover-69.jpg">
+		<img src="https://s-media-cache-ak0.pinimg.com/originals/93/1f/b7/931fb78ae6eee694ed295544bb03b329.jpg">
+		<img src="http://www.dvdsreleasedates.com/covers/flash-season-1-dvd-cover-58.jpg">
+		<br>
+        <a href="/t/movies/classic" class="btn btn-default"> SHOP </a>
+	</div>
 </div>
