--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -28,10 +28,10 @@
     </div>
   </div>
 
-    <div class="col-md-4" id="fun" >
-      <ul class="nav navbar-nav"  data-hook>
-        <li class="nav navbar-nav" data-hook><%= link_to Spree.t(:SKYOMIKES), spree.root_path %></li>
-      </ul>
+    <div class="col-md-4">
+      <ul id="fun" data-hook>
+      <li> <%= link_to Spree.t(:SKYOMIKES), spree.root_path %></li>
+    </ul>
     </div>
 
     <div id="main-nav-bar" class="col-md-4">
