--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -99,7 +99,7 @@
 			<h4 class="word2">Anime & Animation</h4></a>
 		</div>
 		<div class="col-md-2" id="second">
-			<a href="/t/movies/romance"><img src="http://t2.gstatic.com/images?q=tbn:ANd9GcSfWrQIDMJ8N0Liy7aO-XQmmA1M4GOLO4LjEaetaSWwlJxAkiba" width="120px" height="180px">			
+			<a href="/t/movies/romance"><img src="http://t2.gstatic.com/images?q=tbn:ANd9GcSfWrQIDMJ8N0Liy7aO-XQmmA1M4GOLO4LjEaetaSWwlJxAkiba" width="120px" class="img-responsive" height="180px">			
 			<h4 class="word2">Romance</h4></a>
 		</div>
 		<div class="col-md-2" id="second">
